# notPokemon

./: .gitignore  PokemonDownload.py  README.md  SQL_Data.py  button.py  config.py  create_deck.py  create_tables.py  database.py  deck.py  game_page.py  main.py  pokedex.db  pokemon_download.py  pyproject.toml  script.js  sql.py  web.py  web_menu.py
game_engine/: game.py  player.py
static/: card.css  card2.css  style.css
templates/: Game_Rules.html  adjective.html  attack_form.html  card.html  cardBack.html  cardStatsA.html  cardStatsB.html  damageRelations.html  game_layout.html  game_template.html  index.html  info.html  initial_pokemon_type.html  layout.html  pokedex.html  pokedex2.html  second_pokemon_type.html  test.html  turn.html  winner.html
tests/: test_battles.py  test_deck.py
