[tool.poetry]
name = "notPokemon"
version = "1.1.8"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
Flask = "^2.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
